# Habit-tracker

./: .env.template  .gitignore  .isort.cfg  README.md  commands.txt  config.py  docker-compose.yaml  main.py  pyproject.toml  setup.cfg
api/: .env.template  Dockerfile  cache.py  config.py  docker-compose.yaml  logger.py  main.py  pyproject.toml  supervisord.ini
api/actions/: create_superuser.py
api/alembic/: env.py
api/alembic/versions/: 2025_02_06_1425-715be686c3ef_add_telegram_id_in_table_users.py  2025_02_07_1922-6325a0d21651_add_uniqueconstraint_for_user_id_name.py  2025_02_08_1759-17bbeaf8fad0_add_table_habit_trackings.py  2025_02_09_1013-7bbac31cc8c7_add_uniqueconstraint_date_habit.py  2025_02_17_1811-f4424ee7d3b7_add_table_kafka_messages.py
api/authentication/: auth_router.py  backend.py  fastapi_users_router.py  strategy.py  user_manager.py
api/authentication/telegram/: auth.py
api/crud/: habit_tracking.py  habits.py  kafka_message.py  telegram.py  users.py
api/database/: base.py  db.py
api/dependencies/: access_token.py  backend.py  fastapi_users_router.py  habit.py  habits.py  strategy.py  telegram_users.py  user_manager.py  users.py
api/exceptions/: habit_tracking.py  habits.py  handlers.py  responses.py  telegram_login.py  unauth_handler.py  untracked_users.py
api/kafka_producer/: main.py  producer.py  remind_generator.py  remind_sender.py  reminder.py
api/middlewares/: exception.py  logging.py
api/models/: __init__.py  access_token.py  habit.py  habit_tracking.py  kafka_message.py  user.py
api/models/mixins/: id_int_pk.py
api/routes/: habit_tracking.py  habits.py  router.py  users.py
api/routes/telegram/: untracked_users.py
api/schemas/: habit.py  habit_tracking.py  untrack.py  user.py
api/utils/: habit_checker.py  habit_tracking_checker.py  kafka_message_checker.py
api/validators/: valid_untrack.py
bot/: .env.template  Dockerfile  bot.py  config.py  get_ngrok_url.sh  logger.py  main.py  pyproject.toml  test_config.py
bot/constants/: all_commands.py
bot/exceptions/: api_handler.py  api_handlers.py  validate_register_data_handler.py
bot/handlers/: __init__.py
bot/handlers/auth/: __init__.py  before_register.py  login.py  logout.py  register.py  start.py
bot/handlers/constants/: all_commands.py  bot_info.py
bot/handlers/default/: __init__.py  echo.py  hello.py  help.py  info.py  start.py
bot/handlers/habits/: __init__.py  (+7 more)
bot/helpers/: api.py  auth.py  habit_tracking.py  habits.py
bot/redis_cache/: auth_headers.py  client.py
bot/schemas/: exceptions.py  habit.py  habit_tracking.py  register.py
bot/utils/: get_all_habits.py  get_habit_by_name.py  habits.py  help_message_generator.py  morphology.py  register_message_checker.py
bot/validators/: register_validator.py
notification/: .env.template  Dockerfile  bot.py  config.py  generate_message.py  main.py  pyproject.toml  reminders.py  tg_reminder.py
notification/helpers/: api.py  exception_handlers.py  untrack.py
notification/kafka_consumer/: consumer.py  reminder.py
(+26 files in other folders)
