[project]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "ratmir",email = "ratmir2020.1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pytelegrambotapi (>=4.26.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "fastapi-users-db-sqlalchemy (>=7.0.0,<8.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
wemake-python-styleguide = "^1.0.0"
isort = "^6.0.0"
types-requests = "^2.32.0.20241016"
