[project]
name = "notification"
version = "0.1.0"
description = ""
authors = [
    {name = "ratmir",email = "ratmir2020.1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytelegrambotapi (>=4.26.0,<5.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
